version 1.40
- EXPERIMENTAL: External keyboard/controller support (for Android Input (ime) Devices)
      - enable in options 
      - (I don't have any devices to test this with so send feedback and your presets if you want them included in the default)
- add device sound buffer size option (user can adjust latency (but may cause crackling if too low on some devices))
- reduce audio latency on lower frequencies
- improve audio sync after fast forwarding
- re-enable fast floppy access, please let me know if this toggle doesn't work for you
- minor bug fixes

version 1.391
- mainly requests:
    - pause/unpause emulation
    - screen zoom presets toggle (fit, x1, x2, x3, x4, stretch full)
    - keyboard zoom presets toggle (fit, x1, x2)
    - remember last tos folder used (separately from disc images folder)
    - option for additional keys in on-screen keyboard (for gem applications)
    - on-screen keyboard option suitable for 'obsession'
    - option to hide all on-screen buttons
    - option to only show on-screen joystick controls

- If you find a disc doesn't work, please try it out on the desktop version of Hatari 1.70 with the same settings first as there should be no difference in compatibility between Hatari and Hataroid. If they work differently, please let me know.

version 1.38
- add hard disk support
- fix fast floppy access

version 1.37
- added turbo speed toggle (top right button)
- added keep screen awake option (default: off)
- various bug fixes

version 1.36
- added fullscreen option
- fix toggling border option
- fix toggling status bar/drive led
- fix crash if set unsupported audio sampling rate

version 1.35
- added read/write permission to external storage. This is required to read files on later versions of android.

version 1.34
- joystick size can be set in options
- all on screen inputs are scaled relative to the screen size

version 1.30
- initial market release